Alterando caminhos para pastas estáticas

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="/portfolio/JonGlazkov.github.io/css/style.css" />
-    <link rel="stylesheet" href="/portfolio/JonGlazkov.github.io/css/media.css">
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700;900&family=Poppins:wght@200;400;500;600;700&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
               <ul>
                 <a href="#about">Sobre</a>
                 <a href="#skills">Skills</a>
-                <a href="#portfolio">Portfolio</a>
+                <a href="#portfolio"></a>
                 <a href="#contact">Contato</a>
               </ul>
             </div>
@@ -49,7 +49,7 @@
             <ul id="menu_content">
                <li><a href="#about" >Sobre</a></li>
                <li><a href="#skills">Skills</a></li>
-               <li><a href="#portfolio">Projetos</a></li>
+               <li><a href="#">Projetos</a></li>
                <li><a href="#contact">Contato</a></li>
             </ul>
          </div>
@@ -71,7 +71,7 @@
               Amo programar e passar o meu conhecimento adiante.
             </p>
             <button class="home_button">
-              <a target="_blank" href="/portfolio/JonGlazkov.github.io/assets/uteis/Currículo-Jonathan-Ventura.pdf"> BAIXAR CURRÍCULO </a>
+              <a target="_blank" href="/assets/uteis/Currículo-Jonathan-Ventura.pdf"> BAIXAR CURRÍCULO </a>
             </button>
           </div>
         </header>
@@ -85,7 +85,7 @@
           <div class="about_content">
               <div id="left_side">
                   <img
-                    src="/portfolio/JonGlazkov.github.io/assets/uteis/minha-foto.jpg"
+                    src="/assets/uteis/minha-foto.jpg"
                     alt="Foto do Autor Jonathan Ventura"
                   />
                   <h3>Jonathan Ventura</h3>
@@ -147,32 +147,32 @@
           <div id="type_skills">
             <div class="skill">
               <span class="skill_name">HTML 5</span>
-              <img src="/portfolio/JonGlazkov.github.io/assets/logos/html-logo.png" alt="Logo do HTML">
+              <img src="/assets/logos/html-logo.png" alt="Logo do HTML">
             </div>
             <div class="skill">
               <span class="skill_name">CSS 3</span>
-              <img src="/portfolio/JonGlazkov.github.io/assets/logos/css3-logo.png" alt="Logo do CSS">
+              <img src="/assets/logos/css3-logo.png" alt="Logo do CSS">
             </div>
             <div class="skill">
               <span class="skill_name">Java Script</span>
-              <img src="/portfolio/JonGlazkov.github.io/assets/logos/javascript-logo.png" alt="Logo do Java Script">
+              <img src="/assets/logos/javascript-logo.png" alt="Logo do Java Script">
             </div>
             <div class="skill">
               <span class="skill_name">Git</span>
-              <img src="/portfolio/JonGlazkov.github.io/assets/logos/git-logo.png" alt="Logo do Git">
+              <img src="/assets/logos/git-logo.png" alt="Logo do Git">
             </div>
             <div class="skill">
               <span class="skill_name">Github</span>        
-              <img src="portfolio/JonGlazkov.github.io/assets/logos/github-logo.png" alt="Logo do Github">
+              <img src="/assets/logos/github-logo.png" alt="Logo do Github">
             </div>
           </div>
     </section>
     <section id="portfolio">
-        <h2>PORTFOLIO</h2>
+        <h2></h2>
         <div id="projects">
           <div class="project">
             <div class="first_part">
-              <img src="/portfolio/JonGlazkov.github.io/assets/projetos/pong-p5.png" alt="Portfolio Game Pong P5.js">
+              <img src="/assets/projetos/pong-p5.png" alt=" Game Pong P5.js">
               <div class="text">
                 <h4> Game - Pong</h4>
                 <p>
@@ -196,7 +196,7 @@
           </div>
           <div class="project">
             <div class="first_part">
-              <img src="/portfolio/JonGlazkov.github.io/assets/projetos/freeway-vaca.png" alt="Portfolio Game Freeway Vaca">
+              <img src="/assets/projetos/freeway-vaca.png" alt=" Game Freeway Vaca">
               <div class="text">
                 <h4>Game - Freeway Vaca</h4>
                 <p>Um jogo feito em P5.js</p>
@@ -218,7 +218,7 @@
           </div>
           <div class="project">
             <div class="first_part">
-              <img src="/portfolio/JonGlazkov.github.io/assets/projetos/formulario-petshop-validador.png" alt="Portfolio Formulario Petshop">
+              <img src="/assets/projetos/formulario-petshop-validador.png" alt=" Formulario Petshop">
               <div class="text">
                 <h4>Formulário de Validação e Cadastro</h4>
                 <p>
@@ -244,7 +244,7 @@
           </div>
           <div class="project">
             <div class="first_part">
-              <img src="/portfolio/JonGlazkov.github.io/assets/projetos/urna-eletronica.png" alt="Portfolio Urna Eletrônica">
+              <img src="/assets/projetos/urna-eletronica.png" alt=" Urna Eletrônica">
               <div class="text">
                 <h4>Urna Eletrônica</h4>
                 <p>
@@ -270,7 +270,7 @@
           </div>
           <div class="project">
             <div class="first_part">
-              <img src="/portfolio/JonGlazkov.github.io/assets/projetos/toca-da-lulu.png" alt="Portfolio Landing Page">
+              <img src="/assets/projetos/toca-da-lulu.png" alt=" Landing Page">
               <div class="text">
                 <h4>Landing Page</h4>
                 <p>
@@ -295,7 +295,7 @@
           </div>
           <div class="project">
             <div class="first_part">
-              <img src="portfolio/JonGlazkov.github.io/assets/projetos/Formulario.png" alt="Portfolio Formulario">
+              <img src="/assets/projetos/Formulario.png" alt=" Formulario">
               <div class="text">
                 <h4>Formulário Validador</h4>
                 <p>
@@ -360,7 +360,7 @@
       </div>
     </section>
     <footer>
-      <span> Created by <a title="Currículo Jonathan Ventura" href="/portfolio/JonGlazkov.github.io/assets/uteis/Currículo-Jonathan-Ventura.pdf">Jonathan Ventura</a> - 2022 ©</span>
+      <span> Created by <a title="Currículo Jonathan Ventura" href="//assets/uteis/Currículo-Jonathan-Ventura.pdf">Jonathan Ventura</a> - 2022 ©</span>
     </footer>
 
     <a id="backToTopButton" href="#desktop">
@@ -390,6 +390,6 @@
     </a>
     <!--Scroll Reveal-->
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="/portfolio/JonGlazkov.github.io/javascript/main.js"></script>
+    <script src="/javascript/main.js"></script>
   </body>
 </html>
