--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <ul>
                 <a href="#about">Sobre</a>
                 <a href="#skills">Skills</a>
-                <a href="#portfolio"></a>
+                <a href="#portfolio">Portfolio</a>
                 <a href="#contact">Contato</a>
               </ul>
             </div>
@@ -360,7 +360,7 @@
       </div>
     </section>
     <footer>
-      <span> Created by <a title="Currículo Jonathan Ventura" href="//assets/uteis/Currículo-Jonathan-Ventura.pdf">Jonathan Ventura</a> - 2022 ©</span>
+      <span> Created by <a title="Currículo Jonathan Ventura" href="/assets/uteis/Currículo-Jonathan-Ventura.pdf">Jonathan Ventura</a> - 2022 ©</span>
     </footer>
 
     <a id="backToTopButton" href="#desktop">
