--- a/index.html
+++ b/index.html
@@ -196,29 +196,31 @@
           </div>
           <div class="project">
             <div class="first_part">
-              <img src="./assets/projetos/freeway-vaca.png" alt=" Game Freeway Vaca">
+              <img src="./assets/projetos/doctorcare.png" alt=" DoctorCare Website Responsivo">
               <div class="text">
-                <h4>Game - Freeway Vaca</h4>
-                <p>Um jogo feito em P5.js</p>
+                <h4>DoctorCare - Responsivo</h4>
+                <p>Projeto feito pela RocketSeat em seu intesivo NLW. Trilha Origin</p>
               </div>
             </div>
             <div class="second_part">
               <div class="text">
-                <h4>Game - Freeway Vaca</h4>
-                <p> Projeto feito colocando em prática a logica de programação adquirido no curso da Alura.
+                <h4>DoctorCare</h4>
+                <p> Exercitado lógica de programação, display grid e flex, e várias outros recursos.
                 </p>
                 <div class="languages">
+                  <span class="language">HTML 5</span>
+                  <span class="language">CSS 3</span>
                   <span class="language">Java Script</span>
                 </div>
                 <div class="button_access">
-                  <a class="access_button" href="https://github.com/JonGlazkov/FreewaydaVacaJs" target="_blank">Acessar</a>
+                  <a class="access_button" href="https://jonglazkov.github.io/DoctorCare/" target="_blank">Acessar</a>
                 </div>
               </div>
             </div>
           </div>
           <div class="project">
             <div class="first_part">
-              <img src="/assets/projetos/formulario-petshop-validador.png" alt=" Formulario Petshop">
+              <img src="./assets/projetos/formulario-petshop-validador.png" alt=" Formulario Petshop">
               <div class="text">
                 <h4>Formulário de Validação e Cadastro</h4>
                 <p>
@@ -244,7 +246,7 @@
           </div>
           <div class="project">
             <div class="first_part">
-              <img src="/assets/projetos/urna-eletronica.png" alt=" Urna Eletrônica">
+              <img src="./assets/projetos/urna-eletronica.png" alt=" Urna Eletrônica">
               <div class="text">
                 <h4>Urna Eletrônica</h4>
                 <p>
@@ -270,7 +272,7 @@
           </div>
           <div class="project">
             <div class="first_part">
-              <img src="/assets/projetos/toca-da-lulu.png" alt=" Landing Page">
+              <img src="./assets/projetos/toca-da-lulu.png" alt=" Landing Page">
               <div class="text">
                 <h4>Landing Page</h4>
                 <p>
@@ -295,7 +297,7 @@
           </div>
           <div class="project">
             <div class="first_part">
-              <img src="/assets/projetos/Formulario.png" alt=" Formulario">
+              <img src="./assets/projetos/Formulario.png" alt=" Formulario">
               <div class="text">
                 <h4>Formulário Validador</h4>
                 <p>
