--- a/index.html
+++ b/index.html
@@ -168,24 +168,30 @@
         <div id="projects">
           <div class="project">
             <div class="first_part">
-              <img src="./assets/projetos/pong-p5.png" alt=" Game Pong P5.js">
+              <img src="./assets/projetos/projeto-finalizado-react.png" alt="Letmeask React">
               <div class="text">
-                <h4> Game - Pong</h4>
+                <h4> Letmeask</h4>
                 <p>
-                  Um jogo arcade feito no P5.js Web
+                  Um site de serviço de Streaming com autenticação do Google.
                 </p>
               </div>
             </div>
             <div class="second_part">
               <div class="text">
-                <h4>Game - Arcade Pong</h4>
-                <p> Primeiro projeto feito colocando em prática a logica de programação adquirido no curso da Alura.
+                <h4>Letmeask - React</h4>
+                <p>
+                  Meu primeiro projeto feito em React junto com TypeScript.<br> 
+                  Foi feito autenticação com Google e utilizei do Banco de dados Firebase também fornecido pela Google.
+                  Utilizei uma paleta de cores que criei e também adicionei um Toggle Dark Mode.
                 </p>
                 <div class="languages">
-                  <span class="language">Java Script</span>
+                  <span class="language">HTML5</span>
+                  <span class="language">SCSS/SASS</span>
+                  <span class="language">Type Script</span>
+                  <span class="language">React</span>
                 </div>
                 <div class="button_access">
-                  <a class="access_button" href="https://jonglazkov.github.io/PongJs/" target="_blank">Acessar</a>
+                  <a class="access_button" href="https://letmeask-aa546.web.app" target="_blank">Acessar</a>
                 </div>
               </div>
             </div>
@@ -317,6 +323,16 @@
               </div>
             </div>
           </div>
+          <div class="project">
+            <div class="first_part">
+              <img src="./assets/projetos/pong-p5.png" alt=" Game Pong P5.js">
+              <div class="text">
+                <h4> Game - Pong</h4>
+                <p>
+                  Um jogo arcade feito no P5.js Web
+                </p>
+              </div>
+            </div>
         </div>
     </section>
     <section id="contact">
