--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <h4>Letmeask - React</h4>
                 <p>
                   Meu primeiro projeto feito em React junto com TypeScript.<br> 
-                  Foi feito autenticação com Google e utilizei do Banco de dados Firebase também fornecido pela Google.
+                  Foi feito autenticação com Google e utilizei do Banco de dados Firebase também fornecido pela Google.<br>
                   Utilizei uma paleta de cores que criei e também adicionei um Toggle Dark Mode.
                 </p>
                 <div class="languages">
