Incrementando projetos e skills

--- a/index.html
+++ b/index.html
@@ -158,6 +158,18 @@
               <img src="./assets/logos/javascript-logo.png" alt="Logo do Java Script">
             </div>
             <div class="skill">
+              <span class="skill_name">Type Script</span>
+              <img src="./assets/logos/typescript-logo.png" alt="Logo do Type Script">
+            </div>
+            <div class="skill">
+              <span class="skill_name">React</span>
+              <img src="./assets/logos/react-logo.png" alt="Logo do React JS">
+            </div>
+            <div class="skill">
+              <span class="skill_name">SASS</span>
+              <img src="./assets/logos/sass-logo.png" alt="Logo do SASS">
+            </div>
+            <div class="skill">
               <span class="skill_name">Git</span>
               <img src="./assets/logos/git-logo.png" alt="Logo do Git">
             </div>
