--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           </div>
     </section>
     <section id="portfolio">
-        <h2></h2>
+        <h2>PROJETOS</h2>
         <div id="projects">
           <div class="project">
             <div class="first_part">
