Adicionando second part (pong)

--- a/index.html
+++ b/index.html
@@ -345,6 +345,20 @@
                 </p>
               </div>
             </div>
+            <div class="second_part">
+              <div class="text">
+                <h4> Game - Pong</h4>
+                <p> Feito um jogo de raquete para exercitar a lógica de programação em JS.
+                </p>
+                <div class="languages">
+                  <span class="language">Java Script</span>
+                </div>
+                <div class="button_access">
+                  <a class="access_button" href="https://jonglazkov.github.io/PongJs" target="_blank">Acessar</a>
+                </div>
+              </div>
+            </div>
+          </div>  
         </div>
     </section>
     <section id="contact">
