Adding new project (Feedget)

--- a/index.html
+++ b/index.html
@@ -180,6 +180,36 @@
         <div id="projects">
           <div class="project">
             <div class="first_part">
+              <img src="./assets/projetos/feedget.png" alt="Feedget em React">
+              <div class="text">
+                <h4>Feedget</h4>
+                <p>
+                  Um balão flutuante que permite que seja enviado um feedback com uma bug, ideia ou outra coisa.
+                </p>
+              </div>
+            </div>
+            <div class="second_part">
+              <div class="text">
+                <h4>Feedget - React</h4>
+                <p>
+                  Um balão flutuante feito em React e Node.js totalmente com acessibilidade.<br>
+                  O feedback pode ser enviado uma screenshot da tela onde é carregado e enviado junto ao comentário, sem a necessidade de procurar no computador.<br>
+                  O Front-end foi dado deploy no Vercel, já o Back-end no Railway
+                </p>
+                <div class="languages">
+                  <span class="language">HTML5</span>
+                  <span class="language">Tailwind CSS</span>
+                  <span class="language">Type Script</span>
+                  <span class="language">React</span>
+                </div>
+                <div class="button_access">
+                  <a class="access_button" href="https://feedget-three-khaki.vercel.app" target="_blank">Acessar</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project">
+            <div class="first_part">
               <img src="./assets/projetos/projeto-finalizado-react.png" alt="Letmeask React">
               <div class="text">
                 <h4> Letmeask</h4>
