Adding new project (Feedget)

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               <div class="text">
                 <h4>Feedget</h4>
                 <p>
-                  Um balão flutuante que permite que seja enviado um feedback com uma bug, ideia ou outra coisa.
+                  Um balão flutuante que permite que seja enviado um feedback da experiência no site, totalmente com acessibilidade.
                 </p>
               </div>
             </div>
@@ -192,8 +192,7 @@
               <div class="text">
                 <h4>Feedget - React</h4>
                 <p>
-                  Um balão flutuante feito em React e Node.js totalmente com acessibilidade.<br>
-                  O feedback pode ser enviado uma screenshot da tela onde é carregado e enviado junto ao comentário, sem a necessidade de procurar no computador.<br>
+                  O feedback pode ser enviado uma screenshot da tela onde é carregado, armazenado e enviado junto ao comentário.<br>
                   O Front-end foi dado deploy no Vercel, já o Back-end no Railway
                 </p>
                 <div class="languages">
