--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                   <span class="language">HTML 5</span>
                   <span class="language">Tailwind CSS</span>
                   <span class="language">Type Script</span>
+                  <span class="language">Node.js</span>
                   <span class="language">React</span>
                 </div>
                 <div class="button_access">
