Adicionando novo projeto(pomodoro-timer)

--- a/index.html
+++ b/index.html
@@ -180,6 +180,35 @@
         <div id="projects">
           <div class="project">
             <div class="first_part">
+              <img src="./assets/projetos/pomodoro-finalizado.png" alt="Pomodoro Timer em React">
+              <div class="text">
+                <h4>Pomodoro Timer</h4>
+                <p>
+                  Um timer feito com o método de Pomodoro para maior foco em atividades.
+                </p>
+              </div>
+            </div>
+            <div class="second_part">
+              <div class="text">
+                <h4>Pomodoro Timer - React</h4>
+                <p>
+                  Pode ser customizado a cor do círculo, as fontes e o tempo com 3 variáveis.
+                  Pomodoro Timer, Short Break e Long Break.
+                </p>
+                <div class="languages">
+                  <span class="language">HTML 5</span>
+                  <span class="language">SCSS/SASS</span>
+                  <span class="language">Java Script</span>
+                  <span class="language">React</span>
+                </div>
+                <div class="button_access">
+                  <a class="access_button" href="https://pomodoro-timer-topaz.vercel.app" target="_blank">Acessar</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project">
+            <div class="first_part">
               <img src="./assets/projetos/feedget.png" alt="Feedget em React">
               <div class="text">
                 <h4>Feedget</h4>
