Adicionando novo projeto

--- a/index.html
+++ b/index.html
@@ -182,6 +182,33 @@
             <div class="first_part">
               <img src="./assets/projetos/pomodoro-finalizado.png" alt="Pomodoro Timer em React">
               <div class="text">
+                <h4>Calculadora</h4>
+                <p>
+                  Uma calculadora com todas as funcionalidades.
+                </p>
+              </div>
+            </div>
+            <div class="second_part">
+              <div class="text">
+                <h4>Calculadora</h4>
+                <p>
+                  Feita para exercitar a lógica de programação com números.
+                </p>
+                <div class="languages">
+                  <span class="language">HTML 5</span>
+                  <span class="language">CSS</span>
+                  <span class="language">Java Script</span>
+                </div>
+                <div class="button_access">
+                  <a class="access_button" href="https://calculadora-jonglazkov.vercel.app" target="_blank">Acessar</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project">
+            <div class="first_part">
+              <img src="./assets/projetos/pomodoro-finalizado.png" alt="Pomodoro Timer em React">
+              <div class="text">
                 <h4>Pomodoro Timer</h4>
                 <p>
                   Um timer feito com o método de Pomodoro para maior foco em atividades.
