--- a/index.html
+++ b/index.html
@@ -170,6 +170,10 @@
               <img src="./assets/logos/sass-logo.png" alt="Logo do SASS">
             </div>
             <div class="skill">
+              <span class="skill_name">Redux</span>
+              <img src="./assets/logos/redux-logo.png" alt="Logo do Redux">
+            </div>
+            <div class="skill">
               <span class="skill_name">Git</span>
               <img src="./assets/logos/git-logo.png" alt="Logo do Git">
             </div>
