--- a/index.html
+++ b/index.html
@@ -184,6 +184,32 @@
         <div id="projects">
           <div class="project">
             <div class="first_part">
+              <img src="./assets/projetos/starwars-finalizado.png" alt=" Star Wars">
+              <div class="text">
+                <h4> Star Wars - Dashboard</h4>
+                <p>
+                  Uma página feita utilizando a API do StarWars.
+                </p>
+              </div>
+            </div>
+            <div class="second_part">
+              <div class="text">
+                <h4> Star Wars - Dashboard</h4>
+                <p> Feito uma Dashboard retornando dados da API do StarWars. </p>
+                <div class="languages">
+                  <span class="language">HTML 5</span>
+                  <span class="language">CSS 3</span>
+                  <span class="language">Java Script</span>
+                  <span class="language">React</span>
+                </div>
+                <div class="button_access">
+                  <a class="access_button" href="https://star-wars-phi-two.vercel.app" target="_blank">Acessar</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project">
+            <div class="first_part">
               <img src="./assets/projetos/calculadora-finalizada.png" alt="Pomodoro Timer em React">
               <div class="text">
                 <h4>Calculadora</h4>
@@ -421,30 +447,6 @@
                 </div>
                 <div class="button_access">
                   <a class="access_button" href="https://jonglazkov.github.io/FormValidador/" target="_blank">Acessar</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="project">
-            <div class="first_part">
-              <img src="./assets/projetos/pong-p5.png" alt=" Game Pong P5.js">
-              <div class="text">
-                <h4> Game - Pong</h4>
-                <p>
-                  Um jogo arcade feito no P5.js Web
-                </p>
-              </div>
-            </div>
-            <div class="second_part">
-              <div class="text">
-                <h4> Game - Pong</h4>
-                <p> Feito um jogo de raquete para exercitar a lógica de programação em JS.
-                </p>
-                <div class="languages">
-                  <span class="language">Java Script</span>
-                </div>
-                <div class="button_access">
-                  <a class="access_button" href="https://jonglazkov.github.io/PongJs" target="_blank">Acessar</a>
                 </div>
               </div>
             </div>
